Fixed the color picker in css.

--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <title>MadLib</title><link rel="stylesheet" href="/madlib.css">
+  <title>MadLib</title>
+  <link rel="stylesheet" href="/static/madlibs.css">
 </head>
 <body>
 
